# nes-emulator

./: .gitignore  CMakeLists.txt  README.md  TODO.md  main.c  ntsc_video.c  ntsc_video.h
ref_docs/: index.md
rom/: README.md  build.py  defs.s  header.s  link.x  main.s
src/: apu.c  apu.h  clock.c  clock.h  exit_codes.h  io.c  io.h  load.c  load.h  mapper.md  ppu.c  ppu.h  screen.c  screen.h  utils.c  utils.h
src/cartridge/: ines.h  nrom00.c  nrom00.h
src/cpu/: cpu.c  cpu.h  cpu.md  cpu_alt.c  instructions.h
src/ram/: ram.c  ram.h  ram.md
